--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "teapot"
 version = "0.1.0"
 edition = "2021"
+license = "GPL-3.0-or-later"
 authors = ["Jack Whitehorn jackwh.whitehorn@gmail.com"]
 description = "A cargo inspired build tool for C"
 homepage = "https://github.com/jw2476/teapot"
