--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,4 +18,5 @@ colored = "2.0.0"
 serde = { version = "1.0.160", features = ["derive"] }
 term = "0.7.0"
 toml = "0.7.3"
+toml_edit = "0.19.8"
 walkdir = "2.3.3"
