--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ keywords = ["cli", "build", "c"]
 cc = "1.0.79"
 clap = { version = "4.2.2", features = ["derive"] }
 colored = "2.0.0"
+duct = "0.13.6"
 serde = { version = "1.0.160", features = ["derive"] }
 term = "0.7.0"
 toml = "0.7.3"
